--- a/paginas_web/main_page.html
+++ b/paginas_web/main_page.html
@@ -169,7 +169,7 @@ th, td Ellipsis
             <h1 style="font-size: 40px; margin: 0;">Dataset World</h1>
             <h1 style="font-size: 40px; margin: 0;">Happiness</h1>
 
-            <a href="dataset_page.html">
+            <a href="https://GhostAnalyst30.github.io/World-Happiness-Report/refs/heads/main/paginas_web/main_page.html" target="_blank">
                 <button class = "button_dataset" style="
                     background-color: #2D6A4F;
                     color: white;
