--- a/paginas_web/main_page.html
+++ b/paginas_web/main_page.html
@@ -169,7 +169,7 @@ th, td Ellipsis
             <h1 style="font-size: 40px; margin: 0;">Dataset World</h1>
             <h1 style="font-size: 40px; margin: 0;">Happiness</h1>
 
-            <a href="https://GhostAnalyst30.github.io/World-Happiness-Report/refs/heads/main/paginas_web/main_page.html" target="_blank">
+            <a href="https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/dataset_page.html">
                 <button class = "button_dataset" style="
                     background-color: #2D6A4F;
                     color: white;
@@ -186,7 +186,7 @@ th, td Ellipsis
             </a>
         </div>
 
-        <img src="gifs_paginas_web/estadisticas.gif" class="img-dataset"
+        <img src="https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/gifs_paginas_web/estadisticas.gif" class="img-dataset"
             style="
                 width: 150px; 
                 height: 150px;
@@ -225,7 +225,7 @@ th, td Ellipsis
             <h1 style="font-size: 40px; margin: 0;">What happend</h1>
             <h1 style="font-size: 40px; margin: 0;">with Colombia?</h1>
 
-            <a href="colombia_page.html">
+            <a href="https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/colombia.html">
                 <button class = "button_dataset" style="
                     background-color: #2D6A4F;
                     color: white;
@@ -242,7 +242,7 @@ th, td Ellipsis
             </a>
         </div>
 
-        <img src="gifs_paginas_web/colombia.gif" class="img-dataset"
+        <img src="https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/gifs_paginas_web/colombia.gif" class="img-dataset"
             style="
                 width: 150px; 
                 height: 150px;
@@ -272,7 +272,7 @@ th, td Ellipsis
              
     <div style="display: flex; align-items: right; justify-content: space-between;">
 
-        <img src="gifs_paginas_web/feliz.gif" class="img-dataset"
+        <img src="https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/gifs_paginas_web/feliz.gif" class="img-dataset"
             style="
                 width: 150px; 
                 height: 150px;
@@ -291,7 +291,7 @@ th, td Ellipsis
             <h1 style="font-size: 40px; margin: 0; text-align: right;">The Happiest</h1>
             <h1 style="font-size: 40px; margin: 0; text-align: right;">Countries</h1>
 
-            <a href="dataset_page.html">
+            <a href="https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/dataset_page.html">
                 <button class = "button_dataset" style="
                     background-color: #2D6A4F;
                     color: white;
@@ -328,7 +328,7 @@ th, td Ellipsis
             
     <div style="display: flex; align-items: right; justify-content: space-between;">
 
-        <img src="gifs_paginas_web/triste.gif" class="img-dataset"
+        <img src="https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/gifs_paginas_web/triste.gif" class="img-dataset"
             style="
                 width: 150px; 
                 height: 150px;
@@ -347,7 +347,7 @@ th, td Ellipsis
             <h1 style="font-size: 40px; margin: 0; text-align: right;">The Unhappiest</h1>
             <h1 style="font-size: 40px; margin: 0; text-align: right;">Countries</h1>
 
-            <a href="dataset_page.html">
+            <a href="https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/dataset_page.html">
                 <button class = "button_dataset" style="
                     background-color: #2D6A4F;
                     color: white;
