--- a/paginas_web/dataset_page.html
+++ b/paginas_web/dataset_page.html
@@ -130,7 +130,7 @@ th, td Ellipsis
         ">
             
         <style>
-        .vx_table_5b14cfa5 {
+        .vx_table_c2ffb93b {
             width:100%;
             border-collapse:collapse;
             font-family:Arial;
@@ -139,7 +139,7 @@ th, td Ellipsis
         }
 
         /* encabezado */
-        .vx_table_5b14cfa5 thead th {
+        .vx_table_c2ffb93b thead th {
             background:#2D6A4F;
             color:white;
             padding:9px;
@@ -150,24 +150,24 @@ th, td Ellipsis
         }
 
         /* celdas */
-        .vx_table_5b14cfa5 tbody td {
+        .vx_table_c2ffb93b tbody td {
             padding:7px;
             border-bottom:1px solid #1B433222;
         }
 
         /* zebra rows */
-        .vx_table_5b14cfa5 tbody tr:nth-child(even) {
+        .vx_table_c2ffb93b tbody tr:nth-child(even) {
             background:#2D6A4F22;
         }
 
         /* hover */
-        .vx_table_5b14cfa5 tbody tr:hover {
+        .vx_table_c2ffb93b tbody tr:hover {
             background:#FFFFFF33;
             transition:background 0.15s;
         }
         </style>
         
-            <table class="dataframe vx_table_5b14cfa5">
+            <table class="dataframe vx_table_c2ffb93b">
   <thead>
     <tr style="text-align: right;">
       <th>Year</th>
@@ -29769,7 +29769,7 @@ th, td Ellipsis
         justify-items: center;
         margin-top: 10%;">
 
-        <a href="main_page.html">
+        <a href="https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/main_page.html">
             <button class = "button_dataset" style="
                 background-color: #2D6A4F;
                 color: white;
