--- a/Notebooks/dataset_page.html
+++ b/Notebooks/dataset_page.html
@@ -130,7 +130,7 @@ th, td Ellipsis
         ">
             
         <style>
-        .vx_table_c2ffb93b {
+        .vx_table_4d862b3f {
             width:100%;
             border-collapse:collapse;
             font-family:Arial;
@@ -139,7 +139,7 @@ th, td Ellipsis
         }
 
         /* encabezado */
-        .vx_table_c2ffb93b thead th {
+        .vx_table_4d862b3f thead th {
             background:#2D6A4F;
             color:white;
             padding:9px;
@@ -150,24 +150,24 @@ th, td Ellipsis
         }
 
         /* celdas */
-        .vx_table_c2ffb93b tbody td {
+        .vx_table_4d862b3f tbody td {
             padding:7px;
             border-bottom:1px solid #1B433222;
         }
 
         /* zebra rows */
-        .vx_table_c2ffb93b tbody tr:nth-child(even) {
+        .vx_table_4d862b3f tbody tr:nth-child(even) {
             background:#2D6A4F22;
         }
 
         /* hover */
-        .vx_table_c2ffb93b tbody tr:hover {
+        .vx_table_4d862b3f tbody tr:hover {
             background:#FFFFFF33;
             transition:background 0.15s;
         }
         </style>
         
-            <table class="dataframe vx_table_c2ffb93b">
+            <table class="dataframe vx_table_4d862b3f">
   <thead>
     <tr style="text-align: right;">
       <th>Year</th>
@@ -29769,7 +29769,7 @@ th, td Ellipsis
         justify-items: center;
         margin-top: 10%;">
 
-        <a href="https://ghostanalyst30.github.io/World-Happiness-Report/paginas_web/main_page.html">
+        <a href="https://ghostanalyst30.github.io/World-Happiness-Report/Notebooks/main_page.html">
             <button class = "button_dataset" style="
                 background-color: #2D6A4F;
                 color: white;
@@ -29784,7 +29784,7 @@ th, td Ellipsis
                 Home
             </button>
         </a>
-        <a href="world_page.html">
+        <a href="https://ghostanalyst30.github.io/World-Happiness-Report/Notebooks/world_page.html">
             <button class = "button_dataset" style="
                 background-color: #2D6A4F;
                 color: white;
@@ -29799,7 +29799,7 @@ th, td Ellipsis
                 World
             </button>
         </a>
-        <a href="continent_page.html">
+        <a href="https://ghostanalyst30.github.io/World-Happiness-Report/Notebooks/continent_page.html">
             <button class = "button_dataset" style="
                 background-color: #2D6A4F;
                 color: white;
@@ -29814,7 +29814,7 @@ th, td Ellipsis
                 Continents
             </button>
         </a>
-        <a href="countries_page.html">
+        <a href="https://ghostanalyst30.github.io/World-Happiness-Report/Notebooks/countries_page.html">
             <button class = "button_dataset" style="
                 background-color: #2D6A4F;
                 color: white;
